--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
 body {
-  background-color: red;
+  margin: 0;
+  padding: 0;  
+  background: linear-gradient(289.6deg, #0c0c0c 0%, #2c4550 98.22%);
+  height: 100vh; 
 }
