--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -15,3 +15,27 @@
   font-size: .8rem;
   transform: translateY(-20px);
 }
+
+@media (min-width: 350px) {
+  .container h1 {
+    color: rgb(255, 0, 34);
+  }
+}
+
+@media (min-width: 400px) {
+  .container h1 {
+    color: rgb(100, 233, 12);
+  }
+}
+
+@media (min-width: 450px) {
+  .container h1 {
+    color: rgb(25, 0, 255);
+  }
+}
+
+@media (min-width: 500px) {
+  .container h1 {
+    color: rgb(238, 255, 0);
+  }
+}
