--- a/src/components/Layout/Main.module.css
+++ b/src/components/Layout/Main.module.css
@@ -1,19 +1,27 @@
 .container {
-  position: relative;
-  height: 100vh;
+  /* position: relative;
+  height: 100vw;
   background-image: url("../../assets/Vectary_texturebackground.png");
-  background-repeat: no-repeat;
-  background-position: right;
+  background-repeat: no-repeat; */
+  /* background-position: right; */
+  
+
 }
 
 .bgImage {
   position: absolute;
-  width: 100vw;
+  top: 80px;
+  right: 0px; 
+  
+  
 }
 
 .robotImage {
   position: absolute;
-  top: 310px;
-  right: 80px;  
+  top: 215px;
+  right: 100px;  
+  
+  
+  
 }
 
