--- a/src/components/Layout/Navigation.module.css
+++ b/src/components/Layout/Navigation.module.css
@@ -1,9 +1,7 @@
 .container {
-  height: 80px; 
-  z-index: 20;
+  height: 80px;   
   display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  position: fixed;
+  justify-content: space-between;
+  align-items: center;  
   width: 100vw;
 }
