--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,6 @@ body {
   padding: 0;  
   background: linear-gradient(289.6deg, #0c0c0c 0%, #2c4550 98.22%);
   width: 100vw;
+  height: 100vh;
+
 }
