--- a/src/components/Layout/Main.module.css
+++ b/src/components/Layout/Main.module.css
@@ -1,27 +1,25 @@
 .bgImage {
   position: absolute;
   top: 80px;
-  right: 0px; 
+  right: 0px;
 }
 
 .robotImage {
   position: absolute;
   top: 215px;
-  right: 100px;   
+  right: 100px;
 }
 
-@media (min-width: 700px) {
+/* @media (min-width: 700px) {
   .bgImage {
-    
+    position: absolute;
     top: 0px;
-     
+    right: 0px;
   }
-  
+
   .robotImage {
-   
+    position: absolute;
     top: 135px;
- 
+    right: 100px;
   }
-
-
-}
+} */
