--- a/src/components/Layout/MenuHam.module.css
+++ b/src/components/Layout/MenuHam.module.css
@@ -1,19 +1,19 @@
-ul {
+.menuHamList {
   list-style-type: none;
   font-size: 1.3rem;
   padding: 1rem;
   margin: 0;
 }
 
-ul a {
+.menuHamList a {
   text-decoration: none;
   color: rgb(255, 255, 255);
   padding: 0 1rem;
 }
 
-ul a:hover,
-ul a.active,
-ul a:active {
+.menuHamList a:hover,
+.menuHamList a.active,
+.menuHamList a:active {
   border-left: 3px solid rgb(182, 182, 216);
   color: rgb(182, 182, 216);
   text-shadow: 0px 0px 15px white;
