--- a/src/components/Layout/Main.module.css
+++ b/src/components/Layout/Main.module.css
@@ -1,16 +1,17 @@
-.bgImage {
-  position: absolute;
-  top: 80px;
-  right: 0px;
+.container { 
+  z-index: -20;   
 }
 
-.bgImageDesktop {
-  display: none;
+.bgImage {
+  position: absolute;
+  /* top: -100px;
+  right: -460px; */
+  transform: scale(0.7);  
 }
 
 .robotImage {
   position: absolute;
-  right: 100px;
+  right: 80px;
   animation: robotJump 2s ease-out;
   animation-iteration-count: infinite;
   animation-direction: alternate;
@@ -18,39 +19,35 @@
 
 @keyframes robotJump {
   from {
-    top: 215px;
+    top: 150px;
   }
 
   to {
-    top: 190px;
+    top: 120px;
   }
 }
 
-@media (min-width: 700px) {
-  .bgImage {
-    display: none;
-  }
+/* @media (min-width: 700px) { 
 
   .bgImageDesktop {
-    display: block;
     position: absolute;
-    top: -50px;
+    top: -200px;
     right: -150px;
   }
 
   .robotImage {
     position: absolute;
-    right: 420px;
-    transform: scale(1.4);
+    right: 390px;
+    transform: scale(1.1);
   }
 
   @keyframes robotJump {
     from {
-      top: 150px;
+      top: 50px;
     }
 
     to {
-      top: 125px;
+      top: 20px;
     }
   }
-}
+} */
