--- a/src/components/Layout/Main.module.css
+++ b/src/components/Layout/Main.module.css
@@ -1,13 +1,20 @@
 .container { 
-  z-index: -20;   
+ position: relative;
+ 
+}
+
+.bgImageDesktop {
+  display: hidden;
 }
 
 .bgImage {
-  position: absolute;
-  /* top: -100px;
-  right: -460px; */
-  transform: scale(0.7);  
+  /* position: absolute;
+  top: 100px;
+  right: 460px;
+  transform: scale(0.7);   */
 }
+
+
 
 .robotImage {
   position: absolute;
@@ -33,6 +40,11 @@
     position: absolute;
     top: -200px;
     right: -150px;
+    max-width: 100%;
+  }
+
+  .bgImage {
+    display: hidden;
   }
 
   .robotImage {
