--- a/src/components/Layout/Main.module.css
+++ b/src/components/Layout/Main.module.css
@@ -1,20 +1,16 @@
-.container { 
- position: relative;
- 
+.container {
+  position: relative;
 }
 
 .bgImageDesktop {
-  display: hidden;
+  display: none;
 }
 
 .bgImage {
-  /* position: absolute;
-  top: 100px;
-  right: 460px;
-  transform: scale(0.7);   */
+  position: absolute;
+  top: 0;
+  right: 0;
 }
-
-
 
 .robotImage {
   position: absolute;
@@ -26,40 +22,74 @@
 
 @keyframes robotJump {
   from {
-    top: 150px;
+    top: 140px;
   }
 
   to {
-    top: 120px;
+    top: 110px;
   }
 }
 
-/* @media (min-width: 700px) { 
-
+@media (min-width: 700px) {
   .bgImageDesktop {
+    display: unset;
     position: absolute;
-    top: -200px;
-    right: -150px;
-    max-width: 100%;
+    top: 0;
+    right: 0;
+    object-position: 200px -150px;
   }
 
   .bgImage {
-    display: hidden;
+    display: none;
   }
 
   .robotImage {
     position: absolute;
-    right: 390px;
-    transform: scale(1.1);
+    right: 160px;
+    transform: scale(1.3);
+  }
+
+
+  @keyframes robotJump {
+    from {
+      top: 70px;
+    }
+
+    to {
+      top: 40px;
+    }
+  }
+}
+
+@media (min-width: 1400px) {
+  .boxLeft {
+    position: absolute;
+    left: 15px;
+    top: -80px;
+    z-index: -5;
+    width: 140px;
+    height: 100vh;
+    border-right: 1px solid white;
+  }
+
+  .bgImageDesktop {   
+    object-position: unset;
+  }
+
+  .robotImage {
+    position: absolute;
+    right: 560px;
+    transform: scale(1.4);
   }
 
   @keyframes robotJump {
     from {
-      top: 50px;
+      top: 210px;
     }
 
     to {
-      top: 20px;
+      top: 180px;
     }
   }
-} */
+
+}
