--- a/src/components/Layout/MenuStandard.module.css
+++ b/src/components/Layout/MenuStandard.module.css
@@ -1,7 +1,14 @@
+.container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 .menuStandardList {
   list-style-type: none;
   display: flex;
-  justify-content: flex-end;
+  flex-direction: row;
+  align-items: center;
 }
 
 .menuStandardList a {
@@ -16,4 +23,20 @@
   border-bottom: 3px solid rgb(182, 182, 216);
   color: rgb(182, 182, 216);
   text-shadow: 0px 0px 15px white;
+}
+
+.sun {
+  margin-right: 3rem;
+  transform: scale(0.8) translateY(0.2rem);
+}
+
+@media (min-width: 1400px) {
+  .menuStandardList a {
+    font-size: 1.5rem;
+  }
+
+  .sun {
+    margin-right: 4rem;
+    transform: scale(1) translateY(0.3rem);
+  }
 }
