--- a/src/components/Layout/Navigation.module.css
+++ b/src/components/Layout/Navigation.module.css
@@ -1,8 +1,10 @@
 .container {
   height: 80px;   
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;  
   width: 100vw;
   z-index: 8;
 }
+
