--- a/src/components/Layout/Pages.module.css
+++ b/src/components/Layout/Pages.module.css
@@ -4,6 +4,17 @@
 
 @media (min-width: 700px) {
   .container {
-    transform: translateY(15rem);
+    transform: translateY(1rem) translateX(2rem);
+    max-width: 500px;
   }
+}
+
+@media (min-width: 1400px) {
+
+  .container {
+    max-width: 800px;
+    transform: translateY(10rem) translateX(11rem);
+
+  }
+
 }
