--- a/src/components/UI/NavLogo.module.css
+++ b/src/components/UI/NavLogo.module.css
@@ -1,4 +1,11 @@
 .logo {
   margin-left: 1rem;
-  transform: scale(0.8); 
+  transform: scale(0.8);
+}
+
+@media (min-width: 1400px) {
+  .logo {
+    margin-left: 2rem;
+    transform: scale(1.2);    
+  }
 }
