--- a/src/components/Layout/Main.module.css
+++ b/src/components/Layout/Main.module.css
@@ -2,6 +2,10 @@
   position: relative;
 }
 
+.icons {
+  display: none;
+}
+
 .bgImageDesktop {
   display: none;
 }
@@ -49,7 +53,6 @@
     transform: scale(1.3);
   }
 
-
   @keyframes robotJump {
     from {
       top: 70px;
@@ -59,6 +62,28 @@
       top: 40px;
     }
   }
+
+  .iconsBox {
+    position: absolute;
+    top: -56px;
+    left: 100px;
+    transform: scale(0.7);
+  }
+  .icons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .icons a {
+    margin-left: 0.7rem;
+  }
+
+  .icons a:hover {
+    transform: scale(1.3);
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+  }
 }
 
 @media (min-width: 1400px) {
@@ -66,13 +91,13 @@
     position: absolute;
     left: 15px;
     top: -80px;
-    z-index: -5;
     width: 140px;
     height: 100vh;
     border-right: 1px solid white;
+    z-index: 5;
   }
 
-  .bgImageDesktop {   
+  .bgImageDesktop {
     object-position: unset;
   }
 
@@ -92,4 +117,25 @@
     }
   }
 
+  .iconsBox {
+    position: absolute;
+    left: 40px;
+    top: 75%;
+    transform: scale(1);
+  }
+  .icons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .icons a {
+    margin-bottom: 3rem;
+  }
+
+  .icons a:hover {
+    transform: scale(1.5);
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+  }
 }
