--- a/src/index.css
+++ b/src/index.css
@@ -7,5 +7,5 @@ body {
   padding: 0;
   background: linear-gradient(289.6deg, #0c0c0c 0%, #2c4550 98.22%);
   height: 100vh;
- 
+  overflow-x: hidden;
 }
