--- a/src/components/Layout/Articles.module.css
+++ b/src/components/Layout/Articles.module.css
@@ -106,9 +106,10 @@
 
 @media (min-width: 1400px) {
   .container {
-    position: absolute;    
+    position: relative;    
     left: 158px;
-    top: 750px;
+    bottom: 0;
+   
   }
 
   .articleBox {
@@ -117,7 +118,8 @@
     justify-content: space-around;
     align-items: center;
     padding: 0;
-    height: 300px;
+    height: 350px;
+    position: relative;
   }
 
   .bgImgArticle img {
