--- a/src/components/Layout/Main.module.css
+++ b/src/components/Layout/Main.module.css
@@ -88,15 +88,16 @@
 
 @media (min-width: 1400px) {
   .iconsBox {
-    position: absolute;
-    left: 20px;
-    top: 75%;
+    position: relative;
+    left: -160px;
+    top: 1050px;
     transform: scale(1);
   }
   .icons {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
   }
 
   .icons a {
@@ -111,11 +112,11 @@
   
   .boxLeft {
     position: absolute;
-    left: 15px;
-    top: -80px;
+    left: 160px;
+    top: -200px;
     width: 140px;
-    height: 100vh;
-    border-right: 1px solid white;
+    bottom: 0;
+    border-left: 1px solid white;
     z-index: 5;
   }
 
